<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#92AFDFDA"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_category">
        <LinearLayout
            android:id="@+id/cat_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cat_desert"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/cup_cake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dessert"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cat_seafood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_cat_seafood"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/fish" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seafood"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cat_breakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/img_cat_breakfast"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/food_drink" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sarapan"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/traditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cat_tradisional"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/chicken" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tradisional"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_recomendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recomendation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recomendation"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_recomendation"
        tools:listitem="@layout/item_card_recipe"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/rv_recomendation"
        app:layout_constraintEnd_toEndOf="@+id/rv_recomendation"
        app:layout_constraintStart_toStartOf="@+id/rv_recomendation"
        app:layout_constraintTop_toTopOf="@+id/rv_recomendation" />

</androidx.constraintlayout.widget.ConstraintLayout>